<resources>
    <string name="app_name">Fly Dream Airways</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create_account">Create an account</string>
    <string name="already_have_account_label">Already have an account?</string>
    <string name="login_label">Log in here</string>
    <string name="login_title">Log In</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email_label">Email</string>
    <string name="email_content_description">Enter email here</string>
    <string name="email_hint_text">example@gmail.com</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Example</string>
    <string name="create_an_account">Create an Account</string>
    <string name="first_name">First Name</string>
    <string name="first_name_content_desc">Input first name</string>
    <string name="first_name_hint">Jane</string>
    <string name="last_name_label">Last Name</string>
    <string name="last_name_hint">Doe</string>
    <string name="label_email">Email</string>
    <string name="hint_email">jdoe@gmail.com</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="phone_number_hint">1300655506</string>
    <string name="address_label">Address</string>
    <string name="hint_address">42 Wallaby Way, Sydney, NSW</string>
    <string name="button_confirm">Confirm</string>
    <string name="label_add_payment_method">Add Payment Method</string>
    <string name="label_payment_method">Payment Method</string>
    <string name="label_card_number">Card Number</string>
    <string name="hint_card_number">0000 0000 0000 0000</string>
    <string name="label_expiration_date">Expiration Date</string>
    <string name="content_description_open_calender">Open Calender</string>
    <string name="label_cvc">CVC</string>
    <string name="hint_cvc">000</string>
    <string name="Button_create_account">Create Account</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="button_continue">Continue</string>
    <string name="label_reset_password">Reset your password</string>
    <string name="text_reset_password">We have sent a 4 digit code\nto your email</string>
    <string name="label_four_digit_code">4 digit code</string>
    <string name="hint_four_digit_code">0000</string>
    <string name="label_new_password">New password</string>
    <string name="label_confirm_password">Confirm password</string>
    <string name="button_reset_password">Reset Password</string>
    <string name="value_required">*This field is required</string>
    <string name="label_password_missmatch">*Passwords do not match</string>
</resources>