<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_textView"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        app:layout_constraintVertical_bias="0.06999999" />

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        app:layout_constraintBottom_toTopOf="@+id/email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        app:layout_constraintVertical_bias="0.90999997" />

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_text"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/password_Text"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_textView"
        app:layout_constraintTop_toBottomOf="@+id/password_textView"
        app:layout_constraintVertical_bias="0.0"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_link"
        app:layout_constraintVertical_bias="0.060000002"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/forgot_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_forgot_password"
        android:textColor="#1770C1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_Text"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>